<resources>
    <string name="app_name">e-Jobsheet</string>
    <string name="notification_text">Tracking, tap to cancel</string>
    <string name="email">andi.play87@gmail.com</string>
    <string name="password">andi0487</string>
    <string name="transport_id" translatable="false">123</string>
    <string name="firebase_path" translatable="false">e-jobsheet</string>

    <!-- TODO: Remove or change this placeholder text -->
    <!-- Strings used for fragments for navigation -->

    <string name="title_activity_login2">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="nm_cust">Nama Customer</string>
    <string name="ejobsheet">e - Jobsheet</string>
    <string name="alamat">Alamat</string>
    <string name="model">Model :</string>
    <string name="sn">SN</string>
    <string name="teknisi">Teknisi</string>
    <string name="kerusakan">Kerusakan :</string>
    <string name="perbaikan">Perbaikan</string>
    <string name="total">TextViewTotoal</string>
    <string name="bw">BW</string>
    <string name="color">Color</string>
    <string name="pekerjaan">Pekerjaan Selesai?</string>
    <string name="ya">Ya</string>
    <string name="tidak">Tidak</string>
    <string name="submit">Submit</string>
    <string name="logo_form">logo_form</string>
    <string name="keterangan">Keterangan</string>
    <string name="contoh_taskalfa_3050ci">Contoh. TaskAlfa 3050ci</string>
    <string name="contoh_ilham">Contoh. Ilham</string>
    <string name="contoh_vya445545">Contoh. VYA445545</string>
    <string name="contoh_paper_jam">Contoh. Paper Jam</string>
    <string name="contoh_bersihkan_pulley_casete">Contoh. Bersihkan Pulley Casete</string>
    <string name="contoh_98786">Contoh. 98786</string>
    <string name="contoh_7786">Contoh. 7786</string>
    <string name="contoh_88765">Contoh. 88765</string>
    <string name="contoh_harus_ganti_pulley">Contoh. Harus ganti Pulley</string>
    <string name="agreement">Pelanggan</string>
    <string name="clear_pad">Hapus</string>
    <string name="save_signature">Simpan</string>
    <string name="api_url">https://field.amidocabang.com/api</string>
    <string name="title_activity_profile">Profile</string>
    <string name="action_settings">Settings</string>
</resources>
