<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:fitsSystemWindows="true"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="13dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/logo_form"
                    android:maxWidth="10dp"
                    android:maxHeight="10dp"
                    app:srcCompat="@drawable/logo" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="59dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="top"
                    android:text="@string/ejobsheet"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    tools:text="e - Jobsheet" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtNmCust"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nm_cust"
                    tools:text="Nama Customer" />

                <TextView
                    android:id="@+id/txtAlmtCust"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/alamat"
                    tools:text="Alamat" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtModel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:width="50dp"
                        android:text="@string/model"
                        tools:text="Model" />

                    <TextView
                        android:id="@+id/txtSn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:width="50dp"
                        android:text="@string/sn"
                        tools:text="SN" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/txtModelValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:width="50dp"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/contoh_taskalfa_3050ci"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/txtSnValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:width="50dp"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/contoh_vya445545"
                        android:inputType="textPersonName" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:width="50dp"
                        android:text="@string/teknisi"
                        tools:text="Teknisi" />

                    <EditText
                        android:id="@+id/txtNmTek"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:width="50dp"
                        android:ems="10"
                        android:hint="@string/contoh_ilham"
                        android:inputType="textPersonName"
                        android:autofillHints="" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/kerusakan"
                        tools:text="@string/kerusakan" />

                    <EditText
                        android:id="@+id/txtProblemValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:height="85dp"
                        android:ems="10"
                        android:gravity="start|top"
                        android:hint="@string/contoh_paper_jam"
                        android:inputType="textMultiLine"
                        android:autofillHints="" />

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/perbaikan"
                        tools:text="@string/perbaikan" />

                    <EditText
                        android:id="@+id/txtSolveValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:height="85dp"
                        android:ems="10"
                        android:gravity="start|top"
                        android:hint="@string/contoh_bersihkan_pulley_casete"
                        android:inputType="textMultiLine"
                        android:autofillHints="" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/total"
                        tools:text="Total" />

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/bw"
                        tools:text="BW" />

                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/color"
                        tools:text="Color" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/txtCntTotValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/contoh_98786"
                        android:inputType="textPersonName"
                        android:autofillHints="" />

                    <EditText
                        android:id="@+id/txtCntBwValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/contoh_7786"
                        android:inputType="textPersonName"
                        android:autofillHints="" />

                    <EditText
                        android:id="@+id/txtCntColValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/contoh_88765"
                        android:inputType="textPersonName"
                        android:autofillHints="" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView19"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:width="60dp"
                        android:text="@string/pekerjaan"
                        tools:text="Pekerjaan Selesai" />

                    <RadioButton
                        android:id="@+id/radioButtonYa"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/ya" />

                    <RadioButton
                        android:id="@+id/radioButtonTidak"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/tidak" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView20"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/keterangan"
                        tools:text="Keterangan" />

                    <EditText
                        android:id="@+id/txtKetValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:height="50dp"
                        android:ems="10"
                        android:gravity="start|top"
                        android:hint="@string/contoh_harus_ganti_pulley"
                        android:inputType="textMultiLine"
                        android:autofillHints="" />
                </LinearLayout>

                <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/submit" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>